select menu item based on page locals

--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -1,7 +1,7 @@
 <div>NAV</div>
 {% if nav %}<ul>{% endif %}
 {% for item in nav %}
-  <li>
+  <li{% if nav_id && nav_id == item.id %} class="selected"{% endif %}>
     {{ loop.index }}. <a href="{{ item.url }}">{{ item.name }}</a>
   </li>
 {% endfor %}
