--- a/src/templates/_layout.html
+++ b/src/templates/_layout.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="assets/css/moonlight.css">
 </head>
 <body>
   {% include "./_header.html" %}
