--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,2 +1,5 @@
 
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+
+@import "mixins/colors";
+@import "mixins/grid";
