--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,7 @@
 {% extends './_layout.html' %}
 
 {% block content %}
-<p>{{ title }}</p>
+<section id="main">
+  <p>{{ title }}</p>
+</section>
 {% endblock %}
