--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,11 +1,19 @@
 // Base
 
+html {
+  height: 100%;
+  overflow-x: hidden;
+}
+
 body {
   font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base;
   color: $text-color;
   background-color: $body-bg;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 a {
