--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -1,5 +1,25 @@
+// Layout
 
-.moonlight {}
+.moonlight {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  &.header-fixed {
+    header#header {
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
+  }
+  &.sidebar-collapsed {
+    header#header, section#main, footer#footer {
+      margin-left: $sidebar-collapsed-width;
+    }
+    aside#sidebar {
+      width: $sidebar-collapsed-width;
+    }
+  }
+}
 
 .box {
   @include box-fixed;
