--- a/src/sass/moonlight.scss
+++ b/src/sass/moonlight.scss
@@ -1,3 +1,4 @@
+// Moonlight
 
 @import "config";
 @import "mixins";
@@ -5,5 +6,4 @@
 @import "colors";
 
 @import "base";
-@import "layout/layout";
-@import "layout/nav";
+@import "layout";
