--- a/src/sass/mixins/_grid.scss
+++ b/src/sass/mixins/_grid.scss
@@ -1,5 +1,5 @@
+// Mixin Grid
 
-// Centered box element
 @mixin box-fixed($gutter: $grid-gutter-width) {
   margin-right: auto;
   margin-left: auto;
