fixed colors template

--- a/src/templates/colors.html
+++ b/src/templates/colors.html
@@ -1,7 +1,7 @@
 {% extends './_layout.html' %}
 
 {% block content %}
-<section class="content">
+<section id="main">
   <p>{{ title }}</p>
   <div>Primary</div>
   <div class="bg-primary-lighter text-white">Lighter</div>
