--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -19,10 +19,10 @@ $black: #000000;
 
 $muted-percent: 15%;
 $hover-percent: 15%;
-$light-percent: 5%;
-$lighter-percent: 10%;
-$dark-percent: 5%;
-$darker-percent: 10%;
+$light-percent: 10%;
+$lighter-percent: 20%;
+$dark-percent: 10%;
+$darker-percent: 20%;
 
 // Scaffolding
 
@@ -86,5 +86,7 @@ $header-height: 50px;
 $sidebar-width: 220px;
 $sidebar-collapsed-width: 60px;
 $sidebar-zindex: $zindex-1000;
+$sidebar-text-color: darken($color-light, $darker-percent);
+$sidebar-background-color: $color-dark;
 
 $footer-height: 50px;
