use system color for example

--- a/src/templates/_sidebar.html
+++ b/src/templates/_sidebar.html
@@ -15,7 +15,7 @@
           </span>
           {% endif %}
           {% if item.label %}
-          <b class="label bg-info pull-right">{{ item.label }}</b>
+          <b class="label bg-system pull-right">{{ item.label }}</b>
           {% endif %}
           <i class="fa fa-cog{% if loop.first %} text-primary{% endif %}"></i>
           <span>{{ item.name }}</span>
