--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -8,6 +8,7 @@ html {
 body {
   font-family: $font-family-base;
   font-size: $font-size-base;
+  font-weight: 300;
   line-height: $line-height-base;
   color: $text-color;
   background-color: $body-bg;
@@ -36,4 +37,8 @@ hr {
   margin-bottom: $line-height-computed;
   border: 0;
   border-top: 1px solid $hr-border;
+}
+
+strong {
+  font-weight: 600;
 }
