--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -46,38 +46,38 @@ $zindex-1000: 1000;
 
 // Typo
 
-$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif: Georgia, "Times New Roman", Times, serif !default;
-$font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace !default;
-$font-family-base: $font-family-sans-serif !default;
+$font-family-sans-serif: "Open Sans", Helvetica, Arial, sans-serif;
+$font-family-serif: Georgia, "Times New Roman", Times, serif;
+$font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace;
+$font-family-base: $font-family-sans-serif;
 
-$font-size-base: 14px !default;
-$font-size-large: ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-small: ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-base: 14px;
+$font-size-large: ceil(($font-size-base * 1.25)); // ~18px
+$font-size-small: ceil(($font-size-base * 0.85)); // ~12px
 
-$font-size-h1: floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2: floor(($font-size-base * 2.15)) !default; // ~30px
-$font-size-h3: ceil(($font-size-base * 1.7)) !default; // ~24px
-$font-size-h4: ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-h5: $font-size-base !default;
-$font-size-h6: ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-h1: floor(($font-size-base * 2.6)); // ~36px
+$font-size-h2: floor(($font-size-base * 2.15)); // ~30px
+$font-size-h3: ceil(($font-size-base * 1.7)); // ~24px
+$font-size-h4: ceil(($font-size-base * 1.25)); // ~18px
+$font-size-h5: $font-size-base;
+$font-size-h6: ceil(($font-size-base * 0.85)); // ~12px
 
 $line-height-base: 1.428571429 !default; // 20/14
-$line-height-computed: floor(($font-size-base * $line-height-base)) !default; // ~20px
+$line-height-computed: floor(($font-size-base * $line-height-base)); // ~20px
 
-$headings-font-family: inherit !default;
-$headings-font-weight: 500 !default;
-$headings-line-height: 1.1 !default;
-$headings-color: inherit !default;
+$headings-font-family: inherit;
+$headings-font-weight: 400;
+$headings-line-height: 1.1;
+$headings-color: inherit;
 
 // Boxes
 
-$box-tablet: (720px + $grid-gutter-width) !default;
-$box-sm: $box-tablet !default;
-$box-desktop: (940px + $grid-gutter-width) !default;
-$box-md: $box-desktop !default;
-$box-large-desktop: (1140px + $grid-gutter-width) !default;
-$box-lg: $box-large-desktop !default;
+$box-tablet: (720px + $grid-gutter-width);
+$box-sm: $box-tablet;
+$box-desktop: (940px + $grid-gutter-width);
+$box-md: $box-desktop;
+$box-large-desktop: (1140px + $grid-gutter-width);
+$box-lg: $box-large-desktop;
 
 $box-padding-ends: 10px;
 $box-padding-sides: 15px;
