--- a/src/templates/colors.html
+++ b/src/templates/colors.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section id="main">
-  <p>{{ title }}</p>
+  <p><strong>{{ title }}</strong></p>
   <div>Primary</div>
   <div class="bg-primary-lighter text-white">Lighter</div>
   <div class="bg-primary-light text-white">Light</div>
