hides or collapse the sidebar

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -89,6 +89,7 @@ $header-height: 50px;
 
 $sidebar-width: 220px;
 $sidebar-collapsed-width: 60px;
+$sidebar-hidden-width: 0;
 $sidebar-zindex: $zindex-1000;
 $sidebar-text-color: darken($color-light, $darker-percent);
 $sidebar-background-color: $color-dark;
