--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,3 +1,10 @@
 <header id="header">
-  <div>HEADER</div>
+  <div class="nav navbar-nav">
+    <a class="btn sidebar-hidden">
+      <i class="fa fa-align-justify"></i>
+    </a>
+    <a class="btn sidebar-collapsed">
+      <i class="fa fa-outdent"></i>
+    </a>
+  </div>
 </header>
