--- a/src/sass/_typo.scss
+++ b/src/sass/_typo.scss
@@ -1,3 +1,3 @@
 // Typo
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500);
