add fixed header

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -86,6 +86,7 @@ $box-padding: $box-padding-ends $box-padding-sides;
 // Layout
 
 $header-height: 50px;
+$header-background-color: $white;
 
 $sidebar-width: 220px;
 $sidebar-collapsed-width: 60px;
