--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,4 +5,5 @@ header#header {
   display: block;
   height: $header-height;
   margin-left: $sidebar-width;
+  background-color: $header-background-color;
 }
