--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -7,4 +7,9 @@
       <i class="fa fa-outdent"></i>
     </a>
   </div>
+  <div class="nav navbar-nav pull-right">
+    <a class="btn header-fixed">
+      <i class="fa fa-th"></i>
+    </a>
+  </div>
 </header>
