--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,15 +1,21 @@
 <header id="header">
-  <div class="nav navbar-nav">
-    <a class="btn sidebar-hidden">
-      <i class="fa fa-align-justify"></i>
-    </a>
-    <a class="btn sidebar-collapsed">
-      <i class="fa fa-outdent"></i>
-    </a>
-  </div>
-  <div class="nav navbar-nav pull-right">
-    <a class="btn header-fixed">
-      <i class="fa fa-th"></i>
-    </a>
-  </div>
+  <ul class="nav navbar-nav">
+    <li>
+      <a class="sidebar-hidden">
+        <i class="fa fa-align-justify"></i>
+      </a>
+    </li>
+    <li>
+      <a class="sidebar-collapsed">
+        <i class="fa fa-outdent"></i>
+      </a>
+    </li>
+  </ul>
+  <ul class="nav navbar-nav pull-right">
+    <li>
+      <a class="header-fixed">
+        <i class="fa fa-th"></i>
+      </a>
+    </li>
+  </ul>
 </header>
