--- a/src/templates/_sidebar.html
+++ b/src/templates/_sidebar.html
@@ -1,6 +1,8 @@
 <aside id="sidebar">
   <header>
-    HEADER
+    <div class="sidebar-brand">
+      HEADER
+    </div>
   </header>
   {% if sidebar.nav %}
   <nav>
