--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -46,7 +46,7 @@ $zindex-1000: 1000;
 
 // Typo
 
-$font-family-sans-serif: "Ubuntu", Helvetica, Arial, sans-serif;
+$font-family-sans-serif: "Open Sans", Helvetica, Arial, sans-serif;
 $font-family-serif: Georgia, "Times New Roman", Times, serif;
 $font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base: $font-family-sans-serif;
