add border bottom to header

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -6,4 +6,5 @@ header#header {
   height: $header-height;
   margin-left: $sidebar-width;
   background-color: $header-background-color;
+  border-bottom: $color-light 1px solid;
 }
