--- a/src/templates/_sidebar.html
+++ b/src/templates/_sidebar.html
@@ -1,7 +1,8 @@
 <aside id="sidebar">
   <header>
     <div class="sidebar-brand">
-      HEADER
+      <i class="icon fa fa-moon-o text-light"></i>
+      <span>MoonLight</span>
     </div>
   </header>
   {% if sidebar.nav %}
@@ -19,7 +20,7 @@
           {% if item.label %}
           <b class="label bg-system pull-right">{{ item.label }}</b>
           {% endif %}
-          <i class="fa fa-cog{% if loop.first %} text-primary{% endif %}"></i>
+          <i class="icon fa fa-cog{% if loop.first %} text-primary{% endif %}"></i>
           <span>{{ item.name }}</span>
         </a>
         {% if item.nav %}
