fix footer after content

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -96,3 +96,4 @@ $sidebar-text-color: darken($color-light, $darker-percent);
 $sidebar-background-color: $color-dark;
 
 $footer-height: 50px;
+$footer-background-color: $white;
