--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -1,3 +1,26 @@
 <footer id="footer">
-  <div>FOOTER</div>
+  <ul class="nav navbar-nav">
+    <li>
+      <a class="text-light-darker">
+        <i class="fa fa-html5"></i>
+      </a>
+    </li>
+    <li>
+      <a class="text-light-darker">
+        <i class="fa fa-css3"></i>
+      </a>
+    </li>
+    <li>
+      <a class="text-light-darker">
+        <i class="fa fa-github"></i>
+      </a>
+    </li>
+  </ul>
+  <ul class="nav navbar-nav pull-right">
+    <li>
+      <p>
+        <strong>Moonshot</strong> Project | <strong>Moolight</strong> Theme
+      </p>
+    </li>
+  </ul>
 </footer>
