--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -16,7 +16,7 @@
       </a>
     </li>
   </ul>
-  <ul class="nav navbar-nav pull-right">
+  <ul class="nav navbar-nav navbar-right">
     <li>
       <p>
         <strong>Moonshot</strong> Project | <strong>Moolight</strong> Theme
