--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,7 +7,16 @@ header#header {
   margin-left: $sidebar-width;
   background-color: $header-background-color;
   border-bottom: $color-light 1px solid;
-  .navbar-right {
-    margin-right: 0;
+  @include box-shadow(0 0px 5px $color-light);
+  a {
+    color: $text-color;
+  }
+  .navbar-nav {
+    &.navbar-left {
+      margin-left: 0;
+    }
+    &.navbar-right {
+      margin-right: 0;
+    }
   }
 }
