--- a/src/sass/moonlight.scss
+++ b/src/sass/moonlight.scss
@@ -5,5 +5,11 @@
 @import "typo";
 @import "colors";
 
+// Layout
 @import "base";
 @import "layout";
+
+// Components
+@import "components";
+
+// Modules
