--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,5 +1,5 @@
 <header id="header">
-  <ul class="nav navbar-nav">
+  <ul class="nav navbar-nav navbar-left">
     <li>
       <a class="sidebar-hidden">
         <i class="fa fa-align-justify"></i>
@@ -11,11 +11,38 @@
       </a>
     </li>
   </ul>
-  <ul class="nav navbar-nav pull-right">
+  <ul class="nav navbar-nav navbar-right">
     <li>
       <a class="header-fixed">
         <i class="fa fa-th"></i>
       </a>
+    </li>
+    <li class="dropdown">
+      <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span>John Doe</span>
+        <b class="caret"></b>
+      </a>
+      <ul class="dropdown-menu dropdown-arrow" role="menu">
+        <li>
+          <a href="#">
+            <span class="badge bg-system pull-right">30%</span>
+            <span>Settings</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">Profile</a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="label bg-warning pull-right">new</span>
+            Help
+          </a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a href="#">Logout</a>
+        </li>
+      </ul>
     </li>
   </ul>
 </header>
