use navbar-text class in footer

--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -18,9 +18,9 @@
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <li>
-      <p>
+      <div class="navbar-text">
         <strong>Moonshot</strong> Project | <strong>Moolight</strong> Theme
-      </p>
+      </div>
     </li>
   </ul>
 </footer>
