--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -10,11 +10,8 @@ footer#footer {
   margin-left: $sidebar-width;
   background-color: $footer-background-color;
   border-top: $color-light 1px solid;
-  p {
+  .navbar-text {
     font-size: 12px;
-    line-height: 20px;
-    padding: ($footer-height - 20) / 2 $box-padding-sides;
-    margin: 0;
   }
   .navbar-right {
     margin-right: 0;
