--- a/src/templates/_layout.html
+++ b/src/templates/_layout.html
@@ -9,6 +9,7 @@
   {% endfor %}
 </head>
 <body>
+  <div id="pace-loader"></div>
   <section class="moonlight">
     {% include "./_header.html" %}
     {% include "./_sidebar.html" %}
